--- a/src/app/business/dashboard/dashboard.component.html
+++ b/src/app/business/dashboard/dashboard.component.html
@@ -1,5 +1,1 @@
-<div class="container mx-auto mt-20 grid grid-cols-1 gap-8 md:grid-cols-2 xl:grid-cols-3">
-    @for (item of allRecipes; track $index) {
-        <app-card [recipeInfo]="item"></app-card>
-    }
-</div>
+<app-pagination [consulta]="'allrecipes'"></app-pagination>
