--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -3,5 +3,5 @@
         <app-card [recipeInfo]="item"></app-card>
     }
 </div>
-<p>{{pagActual}}</p>
+<p>{{pagActual}}/{{pagFinal}}</p>
 <button (click)="pagPrev()" type="button">Anterior</button><button (click)="pagSig()" type="button">Siguiente</button>
