--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -1,10 +1,21 @@
 <div>
+    <span>Datos por página: </span>
+    <select
+    (change)="onSelectChange($event)"
+    class="w-auto p-2 border rounded-lg"
+    >
+        @for (item of rangoItems; track $index){
+            <option [value]="item">{{item}}</option>
+        }
+    </select>
     <div class="container mx-auto mt-20 grid grid-cols-1 gap-8 md:grid-cols-2 xl:grid-cols-3">
         @for (item of datosPagina; track $index) {
             <app-card [recipeInfo]="item"></app-card>
         }
     </div>
-    <button (click)="pagPrev()" [disabled]="pagActual===1" class="bg-blue-500 text-white border-2 border-blue-500 rounded mx-2 my-4 px-2 py-2">Anterior</button>
+    <button (click)="cambioPag(1)" [disabled]="pagActual===1" class="bg-blue-500 text-white border-2 border-blue-500 rounded mx-2 my-4 px-2 py-2">Primera</button>
+    <button (click)="cambioPag(-1)" [disabled]="pagActual===1" class="bg-blue-500 text-white border-2 border-blue-500 rounded mx-2 my-4 px-2 py-2">Anterior</button>
     <span>{{pagActual}}/{{pagFinal}}</span>
-    <button (click)="pagSig()" [disabled]="pagActual==pagFinal" class="bg-blue-500 text-white border-2 border-blue-500 rounded mx-2 my-4 px-2 py-2">Siguiente</button>
+    <button (click)="cambioPag(0)" [disabled]="pagActual==pagFinal" class="bg-blue-500 text-white border-2 border-blue-500 rounded mx-2 my-4 px-2 py-2">Siguiente</button>
+    <button (click)="cambioPag(pagFinal)" [disabled]="pagActual==pagFinal" class="bg-blue-500 text-white border-2 border-blue-500 rounded mx-2 my-4 px-2 py-2">Última</button>
 </div>
