--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -1,7 +1,7 @@
 <div class="min-h-screen bg-gray-50/50">
-    <app-sidebar></app-sidebar>
+    <app-sidebar [isOpen]="isOpen"></app-sidebar>
     <div class="p-4 xl:ml-80">
-        <app-header></app-header>
+        <app-header [isOpen]="isOpen" (toggleMenu)="onToggleMenu($event)"></app-header>
         <div class="mt-12">
             <router-outlet/>
         </div>
