--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,4 +1,26 @@
-<div>
+<div class="bg-white rounded-lg shadow-md overflow-hidden hover: shadow-lg transition-shadow duration-300">
+    <!--Imagen-->
+    <img [src]="recipeInfo.image" [alt]="recipeInfo.name" class="w-full aspect-video object-cover">
+    <!--Contenido-->
+    <div class="p-4">
+        <!--Titulo-->
+        <h3 class="text-lg font-bold text-gray-800 mb-2">{{recipeInfo.name}}</h3>
+        <!--Tipos de dietas-->
+        <div class="flex flex-wrap gap-2 mb-4">
+            @for (diet of recipeInfo.diets; track $index) {
+                <span
+                class="px-2 py-1 bg-green-800 text-md rounded-full text-white">{{diet}}</span>
+            }
+        </div>
+        <!--Botón de detalles-->
+        <a routerLink='/detail/{{recipeInfo.id}}'>
+            <button class="w-full mt-2 bg-blue-500 hover: bg-blue-600 text-white px-4 py-2 rounded-md transition-color duration-200">
+                More details
+            </button>
+        </a>
+    </div>
+</div>
+<!-- <div>
     <div class="rounded-lg overflow-hidden">
         <div class="relative bg-blue-200">
             <div class="py-5 px-5">
@@ -19,7 +41,6 @@
                             <li>{{item}}</li>
                         }
                     </ul>
-                    <!-- <span><a routerLink='/detail/{{recipeInfo.id}}'>More detail</a></span> -->
                     
                 </div>
                 <div class="text-gray-600 text-sm font-medium flex mb-4 mt-2">
@@ -28,4 +49,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
